tests/src/frontend/typechecking/invalid/type_annotation_2.sk
class C() extends B
base class B

fun foo(): void {
  _: C = (C() : B)
}
